--- a/movie.html
+++ b/movie.html
@@ -4,66 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Buster</title>
-    <link rel="stylesheet" href="movie.css">
-    <script src="https://kit.fontawesome.com/ff3b69828d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="movie.css" />
+    <script
+      src="https://kit.fontawesome.com/ff3b69828d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="landing">
       <nav>
         <div class="nav-container">
-          <a href="index.html">
-            <img src="" alt="">
+          <a href="#">
+            <img class="nav-logo" src="./assets/Logo.png" alt="" />
           </a>
           <ul class="nav-links">
-            <li class="nav-link"><a href="index.html">Home</a></li>
+            <li class="nav-link"><a href="https://joshua-garn.github.io/Advanced-E-Portfolio/" target="_blank">Home</a></li>
             <li class="nav-link"><a href="movie.html">Movies</a></li>
           </ul>
         </div>
       </nav>
-    <section id="movie-page">
-    <div class="container">
-      <div class="row">
-        <h1>Movies</h1>
-        <form action="" class="search">
-          <input type="text" class="search-input" placeholder="Search a Movie">
-          <button class="search-button click">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </form>
-        <select id="filter" onchange="filterMovies(event)">
-          <option value="Latest-Movies">Latest Movies</option>
-          <option value="Oldest-Movies">Oldest Movies</option>
-        </select>
-        <div class="movie-list">
-          <div class="movie">
-            <div class="movie-card">
-              <div class="movie-card__container movie-disapear">
-                <img class="movie-poster" src="https://m.media-amazon.com/images/M/MV5BMTY3ODc3MjMzM15BMl5BanBnXkFtZTcwMjIwNzIyMQ@@._V1_SX300.jpg" alt="" />
-                <h3><b>Name</b></h3>
-                <p>Date</p>
-                <p><a href="https://www.imdb.com/title/${movie.imdbID}">IMDB</a></p>
+      <section id="movie-page">
+        <div class="container">
+          <div class="row">
+            <div class="search-container">
+              <form action="" class="search">
+                <input
+                  type="text"
+                  class="search-input"
+                  placeholder="Search a Movie"
+                />
+                <button class="search-button click">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+              </form>
+              <select id="filter" onchange="filterMovies(event)">
+                <option value="Latest-Movies">Latest Movies</option>
+                <option value="Oldest-Movies">Oldest Movies</option>
+              </select>
+            </div>
+            <div class="movie-list">
+              <div class="movie">
+                <div class="movie-card movie-disapear">
+                  <a
+                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    target="_blank"
+                  >
+                    <div class="movie-card__container">
+                      <img
+                        class="movie-poster"
+                        src="https://m.media-amazon.com/images/M/MV5BMTY3ODc3MjMzM15BMl5BanBnXkFtZTcwMjIwNzIyMQ@@._V1_SX300.jpg"
+                        alt=""
+                      />
+                      <h3><b>Bat Thumb</b></h3>
+                      <p>2001</p>
+                      <p></p>
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+    </section>
+    <section id="footer">
+      <div class="container">
+        <hr />
+        <div class="footer-row">
+          <a href="https://www.youtube.com/shorts/KKlT6kReCZs">
+            <img class="footer-img" src="./assets/Logo.png" />
+          </a>
+          <p class="footer-copyright">&copy Movie All Rights Reserved</p>
+          <a
+            href="https://github.com/Joshua-Garn"
+            target="_blank"
+            class="footer-github"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
       </div>
-    </div>
-  </section>
-</section>
-<section id="footer">
-  <div class="container">
-    <hr>
-    <div class="row">
-      <img class="footer-img" src="" alt="">
-      <p class="footer-copyright">&copy Movie All Rights Reserved</p>
-      <ul class="footer-github">
-        <a href="">
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </ul>
-    </div>
-  </div>
-</section>
+    </section>
   </body>
   <script src="movie.js"></script>
 </html>
