--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Buster</title>
-    <link rel="stylesheet" href="movie.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/ff3b69828d.js"
       crossorigin="anonymous"
@@ -86,5 +86,5 @@
       </div>
     </section>
   </body>
-  <script src="movie.js"></script>
+  <script src="index.js"></script>
 </html>
