--- a/index.html
+++ b/index.html
@@ -1,90 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Buster</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/ff3b69828d.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+    <script src="https://kit.fontawesome.com/ff3b69828d.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
     <section id="landing">
-      <nav>
-        <div class="nav-container">
-          <a href="#">
-            <img class="nav-logo" src="./assets/Logo.png" alt="" />
-          </a>
-          <ul class="nav-links">
-            <li class="nav-link"><a href="https://joshua-garn.github.io/Advanced-E-Portfolio/" target="_blank">Home</a></li>
-            <li class="nav-link"><a href="movie.html">Movies</a></li>
-          </ul>
-        </div>
-      </nav>
-      <section id="movie-page">
-        <div class="container">
-          <div class="row">
-            <div class="search-container">
-              <form action="" class="search">
-                <input
-                  type="text"
-                  class="search-input"
-                  placeholder="Search a Movie"
-                />
-                <button class="search-button click">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
-              </form>
-              <select id="filter" onchange="filterMovies(event)">
-                <option value="Latest-Movies">Latest Movies</option>
-                <option value="Oldest-Movies">Oldest Movies</option>
-              </select>
+        <nav>
+            <div class="nav-container">
+                <a href="https://joshua-garn.github.io/Advanced-E-Portfolio/" target="_blank">
+                    <img class="nav-logo click" src="./assets/Logo.png" alt="" />
+                </a>
+                <ul class="nav-links">
+                    <li class="nav-link click"><a href="https://joshua-garn.github.io/Advanced-E-Portfolio/"
+                            target="_blank">Home</a></li>
+                    <li class="nav-link click"><a href="#">Movies</a></li>
+                </ul>
             </div>
-            <div class="movie-list">
-              <div class="movie">
-                <div class="movie-card movie-disapear">
-                  <a
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                    target="_blank"
-                  >
-                    <div class="movie-card__container">
-                      <img
-                        class="movie-poster"
-                        src="https://m.media-amazon.com/images/M/MV5BMTY3ODc3MjMzM15BMl5BanBnXkFtZTcwMjIwNzIyMQ@@._V1_SX300.jpg"
-                        alt=""
-                      />
-                      <h3><b>Bat Thumb</b></h3>
-                      <p>2001</p>
-                      <p></p>
+        </nav>
+        <section id="movie-page">
+            <div class="container">
+                <div class="row">
+                    <div class="search-container">
+                        <form action="" class="search">
+                            <input type="text" class="search-input" placeholder="Search a Movie" />
+                            <button class="search-button click">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                        </form>
+                        <select id="filter" onchange="filterMovies(event)">
+                            <option value="Latest-Movies">Latest Movies</option>
+                            <option value="Oldest-Movies">Oldest Movies</option>
+                        </select>
                     </div>
-                  </a>
+                    <div class="movie-list">
+                        <div class="movie-card movie-disapear">
+                            <a href="https://www.youtube.com/shorts/SXHMnicI6Pg" target="_blank">
+                                <div class="movie-card__container">
+                                    <img class="movie-poster"
+                                        src="https://m.media-amazon.com/images/M/MV5BMTY3ODc3MjMzM15BMl5BanBnXkFtZTcwMjIwNzIyMQ@@._V1_SX300.jpg"
+                                        alt="" />
+                                    <h3><b>Bat Thumb</b></h3>
+                                    <p>2001</p>
+                                    <p></p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </section>
     <section id="footer">
-      <div class="container">
-        <hr />
-        <div class="footer-row">
-          <a href="https://www.youtube.com/shorts/KKlT6kReCZs">
-            <img class="footer-img" src="./assets/Logo.png" />
-          </a>
-          <p class="footer-copyright">&copy Movie All Rights Reserved</p>
-          <a
-            href="https://github.com/Joshua-Garn"
-            target="_blank"
-            class="footer-github"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
+        <div class="container">
+            <hr />
+            <div class="footer-row">
+                <a href="https://www.youtube.com/shorts/KKlT6kReCZs" target="_blank">
+                    <img class="footer-img click" src="./assets/Logo.png" />
+                </a>
+                <p class="footer-copyright">&copy Movie All Rights Reserved</p>
+                <a href="https://github.com/Joshua-Garn" target="_blank" class="footer-github">
+                    <i class="fa-brands fa-github click"></i>
+                </a>
+            </div>
         </div>
-      </div>
     </section>
-  </body>
-  <script src="index.js"></script>
+</body>
+<script src="index.js"></script>
+
 </html>
