fixed some of the links for now.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <section id="landing">
         <nav>
             <div class="nav-container">
-                <a href="https://joshua-garn.github.io/Advanced-E-Portfolio/" target="_blank">
+                <a href="#">
                     <img class="nav-logo click" src="./assets/Logo.png" alt="" />
                 </a>
                 <ul class="nav-links">
-                    <li class="nav-link click"><a href="https://joshua-garn.github.io/Advanced-E-Portfolio/"
-                            target="_blank">Home</a></li>
+                    <li class="nav-link click"><a href="#">Home</a></li>
                     <li class="nav-link click"><a href="#">Movies</a></li>
                 </ul>
             </div>
@@ -40,7 +39,7 @@
                     </div>
                     <div class="movie-list">
                         <div class="movie-card movie-disapear">
-                            <a href="https://www.youtube.com/shorts/SXHMnicI6Pg" target="_blank">
+                            <a href="https://www.imdb.com/title/tt0331189/" target="_blank">
                                 <div class="movie-card__container">
                                     <img class="movie-poster"
                                         src="https://m.media-amazon.com/images/M/MV5BMTY3ODc3MjMzM15BMl5BanBnXkFtZTcwMjIwNzIyMQ@@._V1_SX300.jpg"
@@ -60,7 +59,7 @@
         <div class="container">
             <hr />
             <div class="footer-row">
-                <a href="https://www.youtube.com/shorts/KKlT6kReCZs" target="_blank">
+                <a href="#">
                     <img class="footer-img click" src="./assets/Logo.png" />
                 </a>
                 <p class="footer-copyright">&copy Movie All Rights Reserved</p>
